--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "AR Boid simulation.sln"
+    "dotnet.defaultSolution": "AR-Boids.sln"
 }
